platform/platform/platform-ci-cd-zero-trust/tekton/dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tekton-dashboard
  namespace: tekton-pipelines
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - tekton-dashboard.licenta.local
      secretName: tekton-dashboard-tls
  rules:
    - host: tekton-dashboard.licenta.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: oauth2-proxy-tekton-dashboard
                port:
                  number: 80
